@@ -230,12 +230,17 @@ static hxmc_t *HXformat2_exec1(const hxmc_t *const *argv, bool shell)
 
 static hxmc_t *HXformat2_exec(int argc, const hxmc_t *const *argv)
 {
+	if (argc == 0)
+		return &HXformat2_nexp;
 	return HXformat2_exec1(argv, false);
 }
 
 static hxmc_t *HXformat2_shell(int argc, const hxmc_t *const *argv)
 {
-	const char *cmd[] = {"/bin/sh", "-c", argv[0], NULL};
+	const char *cmd[] = {"/bin/sh", "-c", NULL, NULL};
+	if (argc == 0)
+		return &HXformat2_nexp;
+	cmd[2] = argv[0];
 	return HXformat2_exec1(cmd, true);
 }
 
