@@ -24,7 +24,8 @@ static const char *const fmt2_strings[] = {
 	"empty-4: <%(echo )>\n",
 	"empty-5: <%(echo %())>\n",
 	"empty-6: <%(echo %( ))>\n",
-	"empty-7: <%(snl )>\n",
+	"empty-7: <%(env )> <%(exec )> <%(if )> <%(if cond)> <%(lower )>\n",
+	"empty-8: <%(shell )> <%(snl )> <%(upper )>\n",
 	"basic: <%(ZERO)> <%(ONE)>\n",
 	"recursive-var: <%(%(USER))>\n",
 	"recursive-func: <%(%(env USER))>\n",
